# Resummino

./: HEPForge_instructions.txt  README.md
resummino-3.1.1/: CHANGELOG.md  README.md  docker_alias.sh
resummino-3.1.1/src/: Makefile  hxs.cc  params.cc  resummino.cc  utils.h
resummino-3.1.1/src/gaugino_squark/: pxs_gaugino_squark_virtual_self_energy_QQ.cc  pxs_gaugino_squark_virtual_vertex_QQg.cc
resummino-3.1.2/: CHANGELOG.md  CMakeLists.txt  README.md
resummino-3.1.2/scripts/: apptainer_alias.sh  docker_alias.sh
resummino-3.1.2/src/: resummino.cc  utils.h
scripts/: IRIDIS_submission.py  merge_results.py  prepare_jobs.py
